<resources>
    <string name="app_name">Movie guide</string>
    <string name="movie_details">Movie details</string>
    <string name="main_list_image">main list image</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favourites">Favourites</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="loading_error">Error loading movies!</string>
    <string name="data_unavailable">Movie data unavailable!</string>
    <string name="movie_details_image">movie details image</string>
    <string name="trailers">Trailers</string>
    <string name="play_trailer_imagebutton">play trailer imageButton</string>
    <string name="favourite_image_button">favourite image button</string>
    <string name="reviews">Reviews</string>
    <string name="added_to_favourites">added to favourites</string>
    <string name="removed_from_favourites">removed from favourites</string>
</resources>
